# mirrors-qa

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: Publish.yaml  QA.yaml  backend-Publish.yaml  backend-QA.yaml  backend-Tests.yaml  proton-confdl-Publish.yaml  protonvpn-wireguard-config-downloader-QA.yaml  worker-QA.yaml  worker-manager-Publish.yaml  worker-manager-QA.yaml  worker-task-Publish.yaml  worker-task-QA.yaml
backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  performance_matrix.sql  pyproject.toml
backend/src/backend/: __init__.py  enums.py
backend/src/backend/db/: models.py
backend/src/backend/migrations/: env.py
backend/src/backend/migrations/versions/: 0c273daa1ab0_set_up_database_models.py  307d19a79bcb_add_isp_field_to_tests_model.py  d45beab913d1_set_up_database_models.py  ef3115ef505c_set_up_database_models.py
backend/src/mirrors_qa_backend/: __init__.py  __main__.py  alembic.ini  cli.py  country.py  cryptography.py  entrypoint.py  enums.py  exceptions.py  extract.py  locations.py  main.py  scheduler.py  schemas.py  serializer.py  settings.py  tokens.py
backend/src/mirrors_qa_backend/cli/: country.py  locations.py  mirrors.py  scheduler.py  worker.py
backend/src/mirrors_qa_backend/db/: __init__.py  country.py  exceptions.py  location.py  mirrors.py  models.py  region.py  tests.py  worker.py
backend/src/mirrors_qa_backend/migrations/: env.py  script.py.mako
backend/src/mirrors_qa_backend/migrations/versions/: 074ae280bb70_introduce_regions.py  091da85970cb_add_mirror_base_url_to_test.py  0c273daa1ab0_set_up_database_models.py  17d587447299_remove_locations_table.py  1e455d030d80_set_up_many_to_many_table_for_worker_.py  40f7e2866f5d_add_location_for_tests.py  5c376f6fb191_add_worker_id_to_tests.py  88e49e681048_add_country_code_to_tests.py  e1f384f65fcc_unlink_country_code_from_test_to_country.py  e6deb0a57a6a_use_floating_point_number_for_speed_.py
backend/src/mirrors_qa_backend/routes/: __init__.py  auth.py  dependencies.py  health.py  http_errors.py  tests.py  worker.py
backend/src/mirrors_qa_backend/settings/: __init__.py  api.py  scheduler.py
backend/tests/: conftest.py
backend/tests/cli/: test_country.py  test_mirror.py  test_worker.py
backend/tests/db/: conftest.py  test_location.py  test_mirrors.py  test_tests.py  test_worker.py
backend/tests/routes/: conftest.py  test_auth.py  test_auth_endpoints.py  test_tests_endpoints.py  test_worker.py
dev/: .env  README.md  docker-compose.yaml  prepare_mb_query.py
protonvpn-wireguard-config-downloader/: Dockerfile  README.md  pyproject.toml
protonvpn-wireguard-config-downloader/src/protonvpn_wireguard_config_downloader/: __init__.py  entrypoint.py  protonvpn.py  settings.py
src/speedtest/: __main__.py  main.py
src/speedtest/cli/: __init__.py
tests/: __init__.py
worker/: .env  Dockerfile  README.md  app.py  docker-compose.yaml  docker-entrypoint.sh  manager.Dockerfile  pyproject.toml
worker/manager/: Dockerfile  pyproject.toml
worker/manager/src/mirrors_qa_manager/: __init__.py  backend.py  cryptography.py  docker.py  entrypoint.py  settings.py  worker.py
worker/src/mirrors_qa_worker/: __init__.py  __main__.py  entrypoint.py  settings.py
worker/src/mirrors_qa_worker/manager/: worker.py
worker/src/mirrors_qa_worker/task/: worker.py
worker/src/worker/: __init__.py
worker/task/: Dockerfile  pyproject.toml
worker/task/src/mirrors_qa_task/: __init__.py  entrypoint.py  settings.py  worker.py
